<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buildingDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
...
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorOnPrimary" />

    <ScrollView
        android:id="@+id/entity_data_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        tools:visibility="visible">

...
