<WebView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/campus_map"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    />
