...
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:background="@drawable/button_rounded_corners"
    tools:context=".SearchActivity">

  <EditText
      android:id="@+id/searchText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="32dp"
      android:background="@drawable/rounded_corners"
...
      android:imeOptions="actionSearch"
      android:inputType="textPersonName"
      android:minHeight="48dp"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textColorHint="#757575"
      app:layout_constraintEnd_toStartOf="@+id/searchButton"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:autofillHints="" />

...
